<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="journal">Journal</string>
    <string name="today">Today</string>
    <string name="my_journal">My Journal</string>
    <string name="this_month">This month</string>
    <string name="your_stats">Your Stats</string>
    <string name="personal">Personal</string>
    <string name="app_behaviour">App Behaviour</string>
    <string name="others">Others</string>
    <string name="notification">Notification</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_app">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="progress_information_title">Information about your progress</string>
    <string name="progress_information_message">This page show your progress as you build up habits.\n\nMark all of today\'s habits as "done" to get a perfect day.\n\nAim for as many of these perfect days as you can to build the longest streak.</string>
    <string name="progress_information_ok">I\'ll try my best</string>
    <string name="information">Information</string>
    <string name="dummy_7">7</string>
    <string name="dummy_days">days</string>
    <string name="your_current_streak">Your current streak</string>
    <string name="trophy">Trophy</string>
    <string name="keep_it_up">Keep it up</string>
    <string name="calendar">Calendar</string>
    <string name="longest_streak">Longest streak</string>
    <string name="total_habit_completed">Total habit completed</string>
    <string name="dummy_times">times</string>
    <string name="habit_completion_rate">Habit completion rate</string>
    <string name="dummy_100">100%</string>
    <string name="dummy_20">2.0</string>
    <string name="average_per_daily">Average per daily</string>
    <string name="dummy_4">4</string>
    <string name="check">Check</string>
    <string name="graph">Graph</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="dummy_99_plus">99+</string>
    <string name="_99_ndays">- days</string>
    <string name="add_habit">Add Habit</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="habit_title">Habit title</string>
    <string name="repeat_status">Repeat status</string>
    <string name="repeat_everyday">Repeat everyday</string>
    <string name="_2_times_per_day">2 times per day</string>
    <string name="daily_target">Daily target</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="remind_me_at">Remind me at %s</string>
    <string name="start_from">Start from %s</string>
    <string name="new_habit_created">New habit created</string>
    <string name="select_date">Select Date</string>
    <string name="application_not_found">Application not found</string>
    <string name="mail_subject">Habit Tracker Android</string>
    <string name="feedback_mail_body">Hi, I have some feedback\n</string>
    <string name="share_app_message">Hi, try this app to build good habits!</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_every">Repeat every %s</string>
    <string name="start_from_today">Start from today</string>
    <string name="repeat_this_habit_every">Repeat this habit every</string>
    <string name="your_habit_description">Your habit description</string>
    <string name="habit">Habit</string>
    <string name="running">Running</string>
    <string name="not_completed">Not completed</string>
    <string name="done">Done</string>
    <string name="please_create_a_new_habit">No Habit Here \nLet\'s create a new one</string>
    <string name="success">Success</string>
    <string name="completed">Completed</string>
    <string name="undo">Undo</string>
    <string name="wed">Wed</string>
    <string name="_12">12</string>
    <string name="my_habit">My Habit Records</string>
    <string name="complete_icon">Complete Icon</string>
    <string name="everyday">Everyday</string>
    <string name="reminder">Reminder</string>
    <string name="dummy_clock">09:00</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="your_habit_will_be_deleted">Your habit will be deleted permanently</string>
    <string name="cancel">Cancel</string>
    <string name="streak_counter">%d days</string>
    <string name="description">Description</string>
    <string name="reminder_notification_title">Don\'t lose your momentum 🚀</string>
    <string name="reminder_notification_message">Let\'s build and track %s habit</string>
    <string name="habit_lowercase">habit</string>
    <string name="in_progress">In progress</string>
    <string name="double_placeholder">%.1f</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="started_habit_placeholder">%d habit</string>
    <string name="total_completed_placeholder">%d times</string>
    <string name="april_2022">April 2022</string>
    <string name="some_complete">Some complete</string>
    <string name="all_complete">All complete</string>
    <string name="habit_information_updated">Habit Information Updated</string>
</resources>