<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_journal">

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.artworkspace.habittracker.ui.journal.JournalFragment"
        android:label="@string/journal"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.artworkspace.habittracker.ui.progress.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.artworkspace.habittracker.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>