<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        style="@style/AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="top|start"
            app:expandedTitleMarginStart="18dp"
            app:expandedTitleMarginTop="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:toolbarId="@id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary" />

            <LinearLayout
                android:id="@+id/toolbar_child_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="128dp"
                android:baselineAligned="false"
                android:fitsSystemWindows="true"
                android:gravity="start|bottom"
                android:orientation="vertical"
                android:paddingTop="32dp"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_habit_icon"
                app:layout_constraintTop_toBottomOf="@+id/tv_habit_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/linearLayout5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        app:layout_constraintStart_toEndOf="@+id/iv_habit_icon"
                        app:layout_constraintTop_toBottomOf="@+id/tv_habit_title">

                        <TextView
                            style="@style/Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repeat"
                            android:textAllCaps="true"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_repeat_at"
                            style="@style/Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/everyday"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
                        app:layout_constraintTop_toBottomOf="@+id/tv_habit_title">

                        <TextView
                            style="@style/Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/reminder"
                            android:textAllCaps="true"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_reminder_at"
                            style="@style/Text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:textSize="16sp"
                            tools:text="@string/dummy_clock" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_description_status"
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/description"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_habit_description"
                    style="@style/Text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    android:visibility="gone"
                    tools:text="@string/your_habit_description" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_streak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:elevation="0dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_gradient_color"
                    android:padding="24dp">

                    <TextView
                        android:id="@+id/tv_counter_streak"
                        style="@style/Text.Streak.Counter.Number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/textView5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/_99_ndays" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/Text.Streak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/your_current_streak"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/trophy"
                        android:src="@drawable/ic_trophy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <CalendarView
                android:id="@+id/calendar_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/card_progress_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_streak" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="18dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calendar_history">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_progress_radius"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/graph"
                        android:src="@drawable/ic_baseline_auto_graph_24"
                        app:tint="#00D0CE" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_completion_rate"
                            style="@style/Text.Card.Number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_100" />


                    </LinearLayout>

                    <TextView
                        style="@style/Text.Card.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/habit_completion_rate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_progress_radius"
                    android:orientation="vertical"
                    android:padding="18dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/check"
                        android:src="@drawable/ic_baseline_check_24"
                        app:tint="#FF3C07" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/tv_total_completed"
                            style="@style/Text.Card.Number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/dummy_4" />

                        <TextView
                            style="@style/Text.Card.Suffix"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dummy_times" />

                    </LinearLayout>

                    <TextView
                        style="@style/Text.Card.Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_habit_completed" />
                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>